[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtls-psk"
version = "0.1.0"
description = "DTLS Pre-Shared Key server using OpenSSL via cffi"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["cffi>=1.0"]

[project.urls]
Homepage = "https://github.com/83noit/dtls-psk"

[tool.setuptools.packages.find]
include = ["dtls_psk*"]
